--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,11 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <p>AMERICAN - EUROPEAN ASSOCIATION OF SCIENCES, TECHNOLOGIES, BUSINESSES, AND ARTS (AEASTBA), LLC (New York, USA)
+    </p>
+    <p>welcome all</p>
+    <div id="root">
+    </div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
@@ -41,3 +45,5 @@
     -->
   </body>
 </html>
+
+<!---->
